Upgrade to 6.3..0.CR2 drools version

--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_de.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_de.properties
@@ -22,6 +22,7 @@ Dashboards=Dashboards
 LogOut=Abmelden
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Home=Home
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Home_Page=Home Page
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Process_Definitions=Prozessdefinitionen
@@ -29,10 +30,15 @@ Process_Definitions=Prozessdefinitionen
 Process_Instances=Prozessinstanzen
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Deploy=Deployen
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Contributors=Mitwirkende
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Timeline=Zeitstrahl
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 People=Personen
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Rule_Deployments=Regel-Deployments
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Process_Deployments=Prozess-Deployments
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 newItem=Neues Element
@@ -40,6 +46,7 @@ newItem=Neues Element
 Search=Suche...
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 find=Finden
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 PlugIns=Plugin-Verwaltung
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 missingDefaultPerspective=Standardperspektive nicht gefunden.
@@ -77,7 +84,9 @@ Repository=Repository
 Upload=Hochladen
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author nmirasch
 Refresh=Aktualisieren
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Asset_Management=Asset Management
-PerspectiveEditor=Perspektiven-Editor
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Extensions=Erweiterungen
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author jdimanos
 Apps=Apps
