--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_fr.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_fr.properties
@@ -4,7 +4,7 @@ Tasks_List=Liste de tâches
 Process_Dashboard=Tableau de bord de processus & tâches
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Business_Dashboard=Tableau de bord commercial
-# translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Project_Authoring=Opérations d''auteur du projet
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Administration=Administration
@@ -13,7 +13,7 @@ Authoring=Opérations d''auteur
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Process_Management=Process Management
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants
-artifactRepository=Référentiel artefact
+artifactRepository=Artefact de référentiel
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Tasks=Tâches
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
@@ -22,6 +22,7 @@ Dashboards=Tableaux de bord
 LogOut=Déconnexion
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Home=Accueil
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Home_Page=Page d''accueil
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Process_Definitions=Définitions de processus
@@ -29,12 +30,15 @@ Process_Definitions=Définitions de processus
 Process_Instances=Instances de processus
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Deploy=Déployer
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Contributors=Contributeurs
-# auto translated by TM merge from project: KIE webapp distributions, version: 6.2.0, DocId: org.kie/kie-drools-wb-webapp/org/kie/workbench/drools/client/resources/i18n/AppConstants
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Timeline=Chronologie
-# auto translated by TM merge from project: KIE webapp distributions, version: 6.2.0, DocId: org.kie/kie-drools-wb-webapp/org/kie/workbench/drools/client/resources/i18n/AppConstants
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 People=Personnes
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Rule_Deployments=Déploiements de règle
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Process_Deployments=Déploiements de processus
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 newItem=Nouvel élément
@@ -42,6 +46,7 @@ newItem=Nouvel élément
 Search=Recherche ...
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 find=Chercher
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 PlugIns=Gestion de plugin
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 missingDefaultPerspective=Perspective par défaut non trouvée.
@@ -79,7 +84,9 @@ Repository=Référentiel
 Upload=Charger
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author nmirasch
 Refresh=Rafraîchir
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Asset_Management=Gestion des ressources
-PerspectiveEditor=Éditeur de perspective
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Extensions=Extensions
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author croe@redhat.com
 Apps=Apps
