--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_ja.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_ja.properties
@@ -29,8 +29,11 @@ Process_Definitions=プロセス定義
 Process_Instances=プロセスインスタンス
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author tkobayashi
 Deploy=デプロイ
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author takuro14
 Contributors=コントリビューター
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author takuro14
 Timeline=タイムライン
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author takuro14
 People=ユーザー
 Rule_Deployments=ルールのデプロイメント
 Process_Deployments=プロセスのデプロイメント
@@ -77,7 +80,7 @@ Repository=リポジトリー
 Upload=アップロード
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author nmirasch
 Refresh=リフレッシュ
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author takuro14
 Asset_Management=アセット管理
-PerspectiveEditor=パースペクティブエディター
 Extensions=拡張
 Apps=アプリケーション
