--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_zh_CN.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/AppConstants_zh_CN.properties
@@ -22,6 +22,7 @@ Dashboards=仪表板
 LogOut=登出
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Home=主页
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Home_Page=主页
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Process_Definitions=过程定义
@@ -29,10 +30,15 @@ Process_Definitions=过程定义
 Process_Instances=过程实例
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Deploy=部署
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Contributors=贡献者
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Timeline=时间轴
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 People=People
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Rule_Deployments=规则部署
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Process_Deployments=过程部署
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 newItem=新建条目
@@ -40,6 +46,7 @@ newItem=新建条目
 Search=搜索
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 find=查找
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 PlugIns=插件管理
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 missingDefaultPerspective=未找到默认的透视。
@@ -77,7 +84,9 @@ Repository=库
 Upload=上传
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author nmirasch
 Refresh=刷新
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Asset_Management=资产管理
-PerspectiveEditor=Perspective 编辑器
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Extensions=扩展
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/AppConstants, author xi.huang
 Apps=Apps
