--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/LoginConstants.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/LoginConstants.properties
@@ -1,7 +1,7 @@
 UserName=Username
 Password=Password
 SignIn=Sign In
-LoginTitle=ChtiJBUG KIE Workbench 6
+LoginTitle=KIE Workbench
 loginFailed=Login failed: Not Authorized
 loginAsAnotherUser=Login as another user
 logoutSuccssful=Logout successful
