--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/LoginConstants_es.properties
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/resources/org/kie/workbench/client/resources/i18n/LoginConstants_es.properties
@@ -1,14 +1,16 @@
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
 UserName=Nombre del usuario
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
-Password=Contraseña
+Password=Contrase\u00f1a
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
-SignIn=Inicio de sesión
+SignIn=Inicio de sesi\u00f3n
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author angela.garcia
+LoginTitle=KIE Workbench
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
-LoginTitle=ChtiJBUG KIE Workbench 6
+loginFailed=Inicio de sesi\u00f3n fallido\: no autorizado
 # translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
-loginFailed=Inicio de sesión fallido\: no autorizado
-# translation auto-copied from project KIE webapp distributions, version 6.0.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author nmirasch
-loginAsAnotherUser=Inicio de sesión con otro usuario
-logoutSuccssful=Cierre de sesión exitoso
-loginAgain=Inicio de sesión de nuevo
+loginAsAnotherUser=Inicio de sesi\u00f3n con otro usuario
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author angela.garcia
+logoutSuccssful=Cierre de sesi\u00f3n exitoso
+# translation auto-copied from project KIE webapp distributions, version 6.2.0, document org.kie/kie-wb-webapp/org/kie/workbench/client/resources/i18n/LoginConstants, author angela.garcia
+loginAgain=Inicio de sesi\u00f3n de nuevo
